--- a/activities.html
+++ b/activities.html
@@ -1,18 +1,39 @@
-<h1>Activities</h1>
-<hr />
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Claudia's Resume</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
 
-<a href="index.html">Back</a>
+  	<h1><a href="index.html" class="black-link">Claudia</a></h1>
+  	<p>Phone: 646-522-1329</p>
+  	<p>E-Mail: CXB290@miami.edu</p>
+  	<hr />
+  	<div class="center">
+	  	<a href="experience.html" class="black-link">Experience</a>
+	  	<a href="activities.html" class="black-link">Activities</a>
+	  	<a href="skills.html" class="black-link">Skills</a>
+	  	<a href="4th.html" class="black-link">4th</a>
+	  </div>
+	  <div>
+	  	<h1>Activities</h1>
+	  	<hr />
 
-<h3>PCAA (Prevent Child Abuse America) Philanthropy board</h3>
-<ul>
-	<li>Secured sponsorships and donations</li>
-	<li>Reached out to on campus organizations for co programming, collaboration, and partnership</li>
-	<li>Organized and managed excel sheet to keep track of contacts and donations</li>
-	<li>Maintained regular communication as a liaison between board and community</li>
-</ul>
+	  	<h3>PCAA (Prevent Child Abuse America) Philanthropy board</h3>
+	  	<ul>
+	  		<li>Secured sponsorships and donations</li>
+	  		<li>Reached out to on campus organizations for co programming, collaboration, and partnership</li>
+	  		<li>Organized and managed excel sheet to keep track of contacts and donations</li>
+	  		<li>Maintained regular communication as a liaison between board and community</li>
+	  	</ul>
 
-<h3>AGLO Executive board</h3>
-<ul>
-	<li>Manage social media/email accounts</li>
-	<li>Assist in event planning</li>
-</ul>
+	  	<h3>AGLO Executive board</h3>
+	  	<ul>
+	  		<li>Manage social media/email accounts</li>
+	  		<li>Assist in event planning</li>
+	  	</ul>
+	  </div>
+  </body>
+</html>
