--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>Claudia's Resume</title>
-
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
 
-  	<h1>Claudia</h1>
+  	<h1><a href="index.html" class="black-link">Claudia</a></h1>
   	<p>Phone: 646-522-1329</p>
   	<p>E-Mail: CXB290@miami.edu</p>
   	<hr />
+  	<div class="center">
+	  	<a href="experience.html" class="black-link">Experience</a>
+	  	<a href="activities.html" class="black-link">Activities</a>
+	  	<a href="skills.html" class="black-link">Skills</a>
+	  	<a href="4th.html" class="black-link">4th</a>
+	  </div>
 
-  	<a href="experience.html">Experience</a>
-  	<a href="activities.html">Activities</a>
-  	<a href="skills.html">Skills</a>
-  	<a href="4th.html">4th</a>
+	  <div>
+	  	<img src="smiley.gif" height="100" width="100">
+	  </div>
   </body>
 </html>
