--- a/skills.html
+++ b/skills.html
@@ -1,12 +1,34 @@
-<h1>Skills</h1>
-<hr />
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Claudia's Resume</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
 
-<a href="index.html">Back</a>
+  	<h1><a href="index.html" class="black-link">Claudia</a></h1>
+  	<p>Phone: 646-522-1329</p>
+  	<p>E-Mail: CXB290@miami.edu</p>
+  	<hr />
+  	<div class="center">
+	  	<a href="experience.html" class="black-link">Experience</a>
+	  	<a href="activities.html" class="black-link">Activities</a>
+	  	<a href="skills.html" class="black-link">Skills</a>
+	  	<a href="4th.html" class="black-link">4th</a>
+	  </div>
 
-<ol>
-	<li>Proficient with adobe software (Indesign, Photoshop, Illustrator)</li>
-	<li>Microsoft Office programs including Word, PowerPoint and Excel</li>
-	<li>Search engine optimization</li>
-	<li>Strong verbal and written communication skills</li>
-	<li>Proficient in Romanian</li>
-</ol>
+	  <div>
+	  	<h1>Skills</h1>
+	  	<hr />
+
+	  	<ol>
+	  		<li>Proficient with adobe software (Indesign, Photoshop, Illustrator)</li>
+	  		<li>Microsoft Office programs including Word, PowerPoint and Excel</li>
+	  		<li>Search engine optimization</li>
+	  		<li>Strong verbal and written communication skills</li>
+	  		<li>Proficient in Romanian</li>
+	  	</ol>
+	  </div>
+  </body>
+</html>
