--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   	<h1><a href="index.html" class="black-link">Claudia</a></h1>
   	<p>Phone: 646-522-1329</p>
   	<p>E-Mail: CXB290@miami.edu</p>
+
   	<hr />
+  	
   	<div class="center">
 	  	<a href="experience.html" class="black-link">Experience</a>
 	  	<a href="activities.html" class="black-link">Activities</a>
@@ -18,8 +20,10 @@
 	  	<a href="4th.html" class="black-link">4th</a>
 	  </div>
 
-	  <div>
-	  	<img src="smiley.gif" height="100" width="100">
+	  <hr />
+
+	  <div class="center">
+	  	<img src="" height="100" width="100">
 	  </div>
   </body>
 </html>
