--- a/activities.html
+++ b/activities.html
@@ -15,7 +15,7 @@
 	  	<a href="experience.html" class="black-link">Experience</a>
 	  	<a href="activities.html" class="black-link">Activities</a>
 	  	<a href="skills.html" class="black-link">Skills</a>
-	  	<a href="4th.html" class="black-link">4th</a>
+	  	<a href="about_me.html" class="black-link">About Me</a>
 	  </div>
 	  <div>
 	  	<h1>Activities</h1>
