--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   	<p>E-Mail: CXB290@miami.edu</p>
 
   	<hr />
-  	
+
   	<div class="center">
 	  	<a href="experience.html" class="black-link">Experience</a>
 	  	<a href="activities.html" class="black-link">Activities</a>
 	  	<a href="skills.html" class="black-link">Skills</a>
-	  	<a href="4th.html" class="black-link">4th</a>
+	  	<a href="about_me.html" class="black-link">About Me</a>
 	  </div>
 
 	  <hr />
