--- a/about_me.html
+++ b/about_me.html
@@ -7,9 +7,12 @@
   </head>
   <body>
 
-  	<h1><a href="index.html" class="black-link">Claudia</a></h1>
-  	<p>Phone: 646-522-1329</p>
-  	<p>E-Mail: CXB290@miami.edu</p>
+  	<div class="center">
+	  	<h1 class="mleft45px"><a href="index.html" class="black-link">Claudia</a></h1>
+	  	<p>Phone: 646-522-1329</p>
+	  	<p>E-Mail: CXB290@miami.edu</p>
+	  </div>
+
   	<hr />
   	<div class="center">
 	  	<a href="experience.html" class="black-link">Experience</a>
