--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
 
-  	<h1><a href="index.html" class="black-link">Claudia</a></h1>
-  	<p>Phone: 646-522-1329</p>
-  	<p>E-Mail: CXB290@miami.edu</p>
+  	<div class="center">
+	  	<h1 class="mleft45px"><a href="index.html" class="black-link">Claudia</a></h1>
+	  	<p>Phone: 646-522-1329</p>
+	  	<p>E-Mail: CXB290@miami.edu</p>
+	  </div>
 
   	<hr />
 
@@ -23,7 +25,7 @@
 	  <hr />
 
 	  <div class="center">
-	  	<img src="" height="100" width="100">
+	  	<img src="images/1.png" height="600" width="600">
 	  </div>
   </body>
 </html>
